合并测试执行查询issue和defect的远程调用